examples/v05/checked-mir/reject/use_after_consume.hew
// Reject fixture for `MirCheck::UseAfterConsume`.
//
// `s` is a string (a non-`BitCopy` value class). The `let t = s;`
// consumes it. The trailing `return s;` reads `s` after the move,
// which the Checked MIR move-checker rejects. `hew compile`
// emits a `MirDiagnostic::UseAfterConsume` carrying both the
// consume site and the offending use site, and exits non-zero
// without producing a binary.
fn main() -> string {
    let s = "hello";
    let t = s;
    return s;
}
